<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="match_parent"
	android:orientation="horizontal" android:weightSum="4"
	style="@android:style/ButtonBar">


	<ToggleButton android:text="@string/toogle_collect"
		android:id="@+id/tbt_collect" android:layout_width="wrap_content"
		android:layout_height="fill_parent" android:layout_weight="1"
		android:textOn="@string/toogle_collect" android:textOff="@string/toogle_collect" />

	<ToggleButton android:text="@string/toogle_record"
		android:id="@+id/tbt_record" android:layout_width="wrap_content"
		android:layout_height="fill_parent" android:layout_weight="1"
		android:textOn="@string/toogle_record" android:textOff="@string/toogle_record" />

	<Button android:id="@+id/btn_general_settings"
		android:layout_width="wrap_content" android:layout_height="fill_parent"
		android:layout_weight="1" android:text="@string/button_general_settings" />

	<Button android:id="@+id/btn_sensors_settings"
		android:layout_width="wrap_content" android:layout_height="fill_parent"
		android:layout_weight="1" android:text="@string/button_sensors_settings" />

</LinearLayout>
