<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	
	<TextView android:id="@android:id/empty" android:orientation="vertical"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:gravity="center" android:textAppearance="?android:attr/textAppearanceLarge"
		android:textStyle="italic" android:text="@string/no_sensors_available"
		android:layout_above="@+id/button_bar" android:visibility="gone" />

	<ListView android:id="@android:id/list" android:layout_width="match_parent"
		android:layout_height="match_parent" android:layout_above="@+id/button_bar" />

	<LinearLayout android:id="@+id/button_bar" style="@android:style/ButtonBar"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_alignParentBottom="true" android:weightSum="2">
		
		<Button android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:drawableLeft="@android:drawable/ic_menu_save"
			android:layout_weight="1" android:text="@string/button_save" android:id="@+id/btn_save"/>

		<Button android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
			android:layout_weight="1" android:id="@+id/btn_cancel" android:text="@string/button_cancel"/>

	</LinearLayout>
</RelativeLayout>
